language/move-lang/tests/move_check/parser/byte_string_invalid_hex.exp
error: 

   ┌── tests/move_check/parser/byte_string_invalid_hex.move:3:18 ───
   │
 3 │         b"diem \xG0"
   │                  ^ Invalid hexadecimal character: 'G'
   │

